--- a/example-settings.yml
+++ b/example-settings.yml
@@ -1,11 +1,13 @@
 dictionaries:
   - name: ExampleDictionary
     repo: user/repo
-    access_token: 0123456789abcdefghijklmnopqrstuv
     webhook_secret: 0123456789abcdefghijklmnopqrstuv
+    access_token: 0123456789abcdefghijklmnopqrstuv
 slacks:
-  - slack: example
-    secret: 0123456789abcdefghijklmnopqrstuv/yQ3drOQZiVq8B4oBTB6m
+  - name: example
+    dictionary: 0
+    secret: 0123456789abcdefghijklmnopqrstuv
+    access_token: 0123456789abcdefghijklmnopqrstuv
 api_keys:
   - name: Example User
     token: 0123456789abcdefghijklmnopqrstuv
